<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">BLE SensorTag</string>

    <!-- Common strings -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="turn_on">Turn on</string>

    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="label_services">Services</string>
    <string name="no_data">Please select any service</string>

    <!-- -->
    <string name="empty_scan_list">No devices found</string>
    <string name="empty_services_list">Loading services list...</string>
    <string name="loading_model">Loading model...</string>

    <!-- Dialog strings -->
    <string name="dialog_error_no_ble">Bluetooth Low Energy technology is not supported on your device.</string>
    <string name="dialog_error_no_bluetooth">Bluetooth is not supported on your device.</string>
    <string name="dialog_enable_bluetooth">Please turn on Bluetooth to scan for SensorTag devices around you.</string>

    <!-- Actions -->
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="action_demo">Demo</string>

    <!-- Titles -->
    <string name="title_devices">BLE Device Scan</string>
    <string name="title_demo_accelerometer">Accelerometer Demo</string>
    <string name="title_demo_gyroscope">Gyroscope Demo</string>
    <string name="title_demo_sensor_fusion">Sensor Fusion Demo</string>

    <!-- Unknown values -->
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_demo">@string/action_demo</string>
    <string name="menu_lock_orientation">Lock screen rotation</string>
    <string name="menu_unlock_orientation">Allow screen rotation</string>
</resources>
